Add some missing finals